--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       <div class="mother-child">
         <img src="./images/mother-child.svg" alt="" />
       </div>
+      <button>SIGN UP</button>
+      <!-- <div class="pexels-artem-podrez"></div> -->
+      <img
+        class="pexels-artem-podrez"
+        src="./images/pexels-artem-podrez.jpg"
+        alt=""
+      />
     </main>
   </body>
 </html>
