--- a/index.html
+++ b/index.html
@@ -8,38 +8,42 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">OurCollection</a></li>
-        <li><a href="#">Join Our Cause</a></li>
-        <li><a href="#">News & Events</a></li>
-        <li><a href="#">Success Stories</a></li>
-      </ul>
-    </nav>
-    <header>
-      <div class="no-slogan">
-        <img src="./images/XAGE3_NO SLOGAN WEB 1.png" alt="" />
+    <main class="container">
+      <div class="background">
+        <img src="./images/background.jpg" alt="" />
       </div>
-      <img src="./images/Frame.svg" alt="" />
-    </header>
-    <main>
-      <div class="baby-img">
-        <img src="./images/baby1.png" alt="" />
-        <div class="coming-soon">
-          <img src="./images/Frame-coming-soon.svg" alt="" />
+      <div class="logo">
+        <img src="./images/Beli logo bez pozadine.png" alt="" />
+      </div>
+      <div class="slogan">
+        <img src="./images/white_slogan_copy_Because.png" alt="" />
+      </div>
+      <div class="bonjour">
+        <h1>BONJOUR,</h1>
+        <p>
+          <span class="the">The</span> Bébé Skin Care Collection with a
+          Conscience is on the horizon
+        </p>
+      </div>
+      <div class="information-text">
+        <p>
+          Leave your email to reccive exclusive content and early access to our
+          new collection launch and more.
+        </p>
+      </div>
+      <div class="input">
+        <img src="./images/pisamce i border.png" alt="" />
+        <div class="input-field">
+          <input
+            type="email"
+            name="email"
+            id=""
+            placeholder="myaddress@email.com"
+          />
+          <input type="button" value="SUBMIT" />
         </div>
       </div>
-      <div class="mother-child">
-        <img src="./images/mother-child.svg" alt="" />
-      </div>
-      <button>SIGN UP</button>
-      <!-- <div class="pexels-artem-podrez"></div> -->
-      <img
-        class="pexels-artem-podrez"
-        src="./images/pexels-artem-podrez.jpg"
-        alt=""
-      />
+      <div></div>
     </main>
   </body>
 </html>
