--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <h1>BONJOUR,</h1>
         <p>
           <span class="the">The</span> Bébé Skin Care Collection with a
-          Conscience is on the horizon
+          <span class="the">Conscience</span>
+          is on the horizon
         </p>
       </div>
       <div class="information-text">
@@ -43,7 +44,12 @@
           <input type="button" value="SUBMIT" />
         </div>
       </div>
-      <div></div>
+      <div class="trademark">
+        <img src="./images/trade mark za dno strane_png.png" alt="" />
+      </div>
+      <div class="popup">
+        <img src="./images/popup vector_png fajl.png" alt="" />
+      </div>
     </main>
   </body>
 </html>
