--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         <img src="./images/Beli logo bez pozadine.png" alt="" />
       </div>
       <div class="slogan">
-        <img src="./images/white_slogan_copy_Because.png" alt="" />
+        <h2>BECAUSE LOVE IS ORGANIC <sup>TM</sup></h2>
       </div>
       <div class="bonjour">
         <h1>BONJOUR,</h1>
+        <p><span class="the">The</span> Bébé Skin Care Collection</p>
         <p>
-          <span class="the">The</span> Bébé Skin Care Collection with a
+          with a
           <span class="the">Conscience</span>
           is on the horizon
         </p>
       </div>
       <div class="information-text">
-        <p>
-          Leave your email to reccive exclusive content and early access to our
-          new collection launch and more.
-        </p>
+        <p>Leave your email to reccive exclusive</p>
+        <p>content and early access</p>
+        <p>to our collection launch and more.</p>
       </div>
       <div class="input">
         <img src="./images/pisamce i border.png" alt="" />
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="trademark">
-        <img src="./images/trade mark za dno strane_png.png" alt="" />
+        <p>&#169; 2022 NAOMI SNYDER, INC.</p>
       </div>
       <div class="popup">
         <img src="./images/popup vector_png fajl.png" alt="" />
