--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <img src="./images/Beli logo bez pozadine.png" alt="" />
       </div>
       <div class="slogan">
-        <h2>BECAUSE LOVE IS ORGANIC <sup>TM</sup></h2>
+        <img src="./images/white_slogan_copy_Because.png" alt="" />
+        <!-- <h2>BECAUSE LOVE IS ORGANIC <sup>TM</sup></h2> -->
       </div>
       <div class="bonjour">
         <h1>BONJOUR,</h1>
@@ -45,7 +46,8 @@
         </div>
       </div>
       <div class="trademark">
-        <p>&#169; 2022 NAOMI SNYDER, INC.</p>
+        <img src="./images/trade mark za dno strane_png.png" alt="" />
+        <!-- <p>&#169; 2022 NAOMI SNYDER, INC.</p> -->
       </div>
       <div class="popup">
         <img src="./images/popup vector_png fajl.png" alt="" />
