--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <main class="container">
       <div class="background">
-        <!-- <img src="./images/background.jpg" alt="" /> -->
-        <img src="./images/mob-big.jpg" alt="" />
+        <img class="big" src="./images/background.jpg" alt="" />
+        <img class="small" src="./images/mob-big.jpg" alt="" />
       </div>
       <div class="logo">
         <img src="./images/Beli logo bez pozadine.png" alt="" />
