--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
       </div>
       <div class="information-text">
-        <p>Leave your email to reccive exclusive</p>
+        <p>Leave your email to receive exclusive</p>
         <p>content and early access</p>
         <p>to our collection launch and more.</p>
       </div>
