--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="small" src="./images/mob-big.jpg" alt="" />
       </div>
       <div class="logo">
-        <img src="./images/Beli logo bez pozadine.png" alt="" />
+        <img src="./images/white-logo.png" alt="" />
       </div>
       <div class="slogan">
         <img src="./images/white_slogan_copy_Because.png" alt="" />
@@ -35,23 +35,25 @@
         <p>to our collection launch and more.</p>
       </div>
       <div class="input">
-        <img src="./images/pisamce i border.png" alt="" />
+        <img src="./images/border.png" alt="" />
         <div class="input-field">
-          <input
-            type="email"
-            name="email"
-            id=""
-            placeholder="myaddress@email.com"
-          />
-          <input type="button" value="SUBMIT" />
+          <form action="./script/connect.php" method="post">
+            <input
+              type="email"
+              name="emailTxt"
+              id="emailTxt"
+              placeholder="myaddress@email.com"
+            />
+            <input type="button" name="submit" value="SUBMIT" />
+          </form>
         </div>
       </div>
       <div class="trademark">
-        <img src="./images/trade mark za dno strane_png.png" alt="" />
+        <img src="./images/trademark.png" alt="" />
         <!-- <p>&#169; 2022 NAOMI SNYDER, INC.</p> -->
       </div>
       <div class="popup">
-        <img src="./images/popup vector_png fajl.png" alt="" />
+        <img src="./images/popup.png" alt="" />
       </div>
     </main>
   </body>
