--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
       <div class="input">
         <img src="./images/border.png" alt="" />
         <div class="input-field">
-          <form action="./script/connect.php" method="post">
+          <form>
             <input
               type="email"
               name="emailTxt"
               id="emailTxt"
               placeholder="myaddress@email.com"
+              required
             />
             <input type="button" name="submit" value="SUBMIT" />
           </form>
