--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               placeholder="myaddress@email.com"
               required
             />
-            <input type="button" name="submit" value="SUBMIT" />
+            <input type="submit" name="submit" value="SUBMIT" />
           </form>
         </div>
       </div>
